--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    background-color: #eceef2;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.svg-icon {
+    width: 1rem;
+    height: 1rem;
+}
+
+.svg-icon path,
+.svg-icon polygon,
+.svg-icon rect {
+    fill: #4691f6;
+}
+
+.svg-icon circle {
+    stroke: #4691f6;
+    stroke-width: 1;
+}
+
+h1 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-size: 300%;
+}
+
+.loadinganderror {
+    margin-left: 30%;
+}
+
+h2 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-size: 200%;
+}
+
+.info {
+    padding-left: 15px;
+}
+
+.noparams {
+    display: flex;
+    justify-content: space-between;
+}
+
+.params {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 15px;
 }
