--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ h1 {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 300%;
+    font-family: 'Merriweather', serif;
+    font-style: italic;
 }
 
 .loadinganderror {
